# pg_diesel

./: .gitignore  Cargo.toml  README.md
.github/workflows/: links.yml  rust.yml
src/: database.rs  impls.rs  lib.rs  model_metadata.rs  models.rs  schema.rs  traits.rs
src/database/: builder.rs  key_column_usage_metadata.rs  pg_proc_metadata.rs
src/impls/: check_constraint_like.rs  column_grant_like.rs  column_like.rs  foreign_key_like.rs  function_like.rs  index_like.rs  oid.rs  policy_like.rs  postgres_type.rs  role_like.rs  schema_like.rs  table_grant_like.rs  table_like.rs  trigger_like.rs  unique_index_like.rs
src/model_metadata/: column_metadata.rs  policy_metadata.rs  role_metadata.rs  table_metadata.rs  trigger_metadata.rs
src/models/: information_schema.rs  pg_catalog.rs  public.rs
src/models/information_schema/: administrable_role_authorizations.rs  applicable_roles.rs  attribute.rs  character_set.rs  check_constraint.rs  column.rs  constraint_column_usage.rs  constraint_table_usage.rs  domain_constraint.rs  element_types.rs  information_schema_catalog_name.rs  key_column_usage.rs  parameters.rs  referential_constraint.rs  role_column_grants.rs  role_routine_grants.rs  role_table_grants.rs  role_udt_grants.rs  routines.rs  schemata.rs  table.rs  table_constraint.rs  table_privileges.rs  views.rs
src/models/pg_catalog/: pg_aggregate.rs  pg_aios.rs  pg_am.rs  pg_amop.rs  pg_amproc.rs  pg_attrdef.rs  pg_attribute.rs  pg_auth_members.rs  pg_authid.rs  pg_available_extension_versions.rs  pg_available_extensions.rs  pg_backend_memory_contexts.rs  pg_cast.rs  pg_class.rs  pg_collation.rs  pg_config.rs  pg_constraint.rs  pg_database.rs  pg_extension.rs  pg_foreign_table.rs  pg_group.rs  pg_hba_file_rule.rs  pg_ident_file_mapping.rs  pg_index.rs  pg_init_priv.rs  pg_language.rs  pg_largeobject.rs  pg_operator.rs  pg_partitioned_table.rs  pg_policy_table.rs  pg_prepared_statement.rs  pg_proc.rs  pg_publication.rs  pg_publication_rel.rs  pg_role.rs  (+52 more)
src/schema/: information_schema.rs  pg_catalog.rs  public.rs
src/traits/: oid.rs  postgres_type.rs
tests/: test_completeness.rs  test_load_all.rs
tests/test_utils/: docker_helpers.rs  mod.rs  model_parser.rs  schema_parser.rs
(+103 files in other folders)
