[package]
name = "pg_diesel"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { git = "https://github.com/LucaCappelletti94/diesel", branch = "future3", features = [
  "postgres",
  "extras",
  "64-column-tables",
] }
ipnetwork = { version = "0.21.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"], optional = true }
sql-traits = { git = "https://github.com/earth-metabolome-initiative/sql-traits", branch = "main" }
sqlparser = { version = "0.60.0", features = [
  "serde",
], git = "https://github.com/LucaCappelletti94/sqlparser-rs", branch = "dialect-derives" }
thiserror = "2.0.17"

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full"] }
testcontainers = { version = "0.26.3" }

[lints.rust]
missing_docs = "forbid"
unused_macro_rules = "forbid"
unconditional_recursion = "forbid"
unreachable_patterns = "forbid"
unused_import_braces = "forbid"
unused_must_use = "forbid"
dead_code = "deny"

[lints.clippy]
unreadable_literal = "allow"
missing_panics_doc = "allow"
new_ret_no_self = "allow"
struct_excessive_bools = "allow"
should_panic_without_expect = "allow"
doc_markdown = "warn"
unnecessary_cast = "forbid"
trait_duplication_in_bounds = "forbid"
redundant_clone = "forbid"
redundant_closure = "forbid"
extra_unused_type_parameters = "forbid"
type_repetition_in_bounds = "forbid"
clone_on_copy = "forbid"
panic = "allow"
todo = "deny"
as_conversions = "deny"
as_pointer_underscore = "deny"
as_underscore = "deny"
missing_docs_in_private_items = "deny"
unimplemented = "deny"
assertions_on_result_states = "deny"
big_endian_bytes = "deny"
cfg_not_test = "deny"
clone_on_ref_ptr = "forbid"
dbg_macro = "deny"
pedantic = { level = "deny", priority = -1 }
redundant_guards = "deny"
complexity = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }

[features]
default = ["serde", "postgres-17"]
serde = ["dep:serde"]
postgres-14 = []
postgres-15 = []
postgres-17 = []
# Whether to include routines metadata, which is a rather large
# table with 88 columns.
routines = ["diesel/128-column-tables"]
